--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,32 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
         <service
-            android:name=".service.Server"
+            android:name=".service.AIDLServer"
             android:enabled="true"
             android:exported="true"
             >
             <intent-filter>
-                <action android:name="com.hechuangwu.server.action"/>
+                <action android:name="com.hechuangwu.server.aidl"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
+        </service>
+
+        <service
+            android:name=".service.MessengerServer"
+            android:enabled="true"
+            android:exported="true"
+            >
+            <intent-filter>
+                <action android:name="com.hechuangwu.server.messenger"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+
         </service>
     </application>
 
